- update styling for articles on mobile - fix link

--- a/source/stylesheets/blog.css
+++ b/source/stylesheets/blog.css
@@ -42,6 +42,14 @@ h3 {
     font-size: 1.25em;
   }
 
+  .article-content {
+    float: left;
+    margin-top: 30px;
+    margin-right: 30px;
+    text-align: justify;
+    line-height: 1.4em;
+  }
+
   .main p {
     margin:0 0 15px 0;
     text-align:justify;
